--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 
@@ -14,17 +14,17 @@
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">
           Узнать&nbsp;→
         </a>
-      </h2>
+      </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение мальчика">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
@@ -38,7 +38,7 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
                сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -82,7 +82,7 @@
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее→</a>
       </section>
       <section class="kaufman">
@@ -130,7 +130,7 @@
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </li>
           </ul>
-          <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Изображение треугольника">
+          <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
@@ -150,13 +150,13 @@
         <div class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <nav class="footer__column-links">
-              <a class="footer__column-link" href="#">
+              <a class="footer__column-link" href="#" target="_blank">
                 <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Иконка YouTube"> YouTube
               </a>
-              <a class="footer__column-link" href="#">
+              <a class="footer__column-link" href="#" target="_blank">
                 <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка ВКонтакте"> ВКонтакте
               </a>
-              <a class="footer__column-link" href="#">
+              <a class="footer__column-link" href="#" target="_blank">
                 <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="Иконка TikTok"> TikTok
               </a>
           </nav>
