--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 
@@ -16,11 +15,11 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">
-          Узнать&nbsp;→
+          Узнать&nbsp;&rarr;
         </a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение мальчика">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -39,6 +38,74 @@
                сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </article>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+          <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+          <ul class="cards">
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-attention.png" alt="Картинка с книгой">
+              <h4 class="cards__title">Два вида внимания</h4>
+              <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-recall.png" alt="Картинка со статуей">
+              <h4 class="cards__title">Recall</h4>
+              <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-interliving.png" alt="Картинка в необычном здании">
+              <h4 class="cards__title">Интерливинг</h4>
+              <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-question.png" alt="Изображение человека в четырех стенах">
+              <h4 class="cards__title">Вопросы</h4>
+              <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-competence.png" alt="Картинка сос стопкой книг">
+              <h4 class="cards__title">Иллюзия компетентности</h4>
+              <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            </li>
+          </ul>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+          <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+          <div class="video__iframes">
+              <iframe class="video__iframe"
+            width="560" height="315" 
+            src="https://www.youtube.com/embed/arj7oStGLkU" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+              <iframe class="video__iframe"
+            width="560" height="315" 
+            src="https://www.youtube.com/embed/5MgBikgcWnY" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+          </div>
+      </section>
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным 
+              гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, 
+              да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
+               И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», 
+               ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </article>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -80,10 +147,20 @@
             </li>
           </ul>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее→</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему 
+            миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду 
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги Весь мир-школа">
+            <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -130,7 +207,25 @@
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </li>
           </ul>
-          <div class="kaufman__triangle"></div>
+          <div class="kaufman__triangle rotation"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+          <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+          <nav class="resources__logo-zone">
+            <a class="resources__link" href="#" target="_blank">
+              <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Арзамас">
+            </a>
+            <a class="resources__link" href="#" target="_blank">
+              <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип Н1">
+            </a>
+            <a class="resources__link" href="#" target="_blank">
+              <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип Стрелка">
+            </a>
+            <a class="resources__link" href="#" target="_blank">
+              <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип Полка">
+            </a>
+          </nav>
       </section>
     </main>
     <footer class="footer">
