--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main class="content">
       <section class="description">
-        <article class="two-columns">
+        <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
@@ -37,7 +37,7 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
                сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-        </article>
+        </div>
       </section>
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
@@ -78,20 +78,18 @@
             width="560" height="315" 
             src="https://www.youtube.com/embed/arj7oStGLkU" 
             title="YouTube video player" 
-            frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen></iframe>
               <iframe class="video__iframe"
             width="560" height="315" 
             src="https://www.youtube.com/embed/5MgBikgcWnY" 
             title="YouTube video player" 
-            frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen></iframe>
           </div>
       </section>
       <section class="oakley">
-        <article class="two-columns">
+        <div class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным 
@@ -100,7 +98,7 @@
                И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», 
                ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
-        </article>
+        </div>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
