--- a/index.html
+++ b/index.html
@@ -72,16 +72,14 @@
       </section>
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
-          <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+          <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
               <iframe class="video__iframe"
-            width="560" height="315" 
             src="https://www.youtube.com/embed/arj7oStGLkU" 
             title="YouTube video player" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen></iframe>
               <iframe class="video__iframe"
-            width="560" height="315" 
             src="https://www.youtube.com/embed/5MgBikgcWnY" 
             title="YouTube video player" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -107,7 +105,7 @@
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
-          <h3 class="section-subtitle">Про учёбу и мозг</h3>
+          <p class="section-subtitle">Про учёбу и мозг</p>
           <ul class="table">
             <li class="table__cell">
               <h4 class="table__heading">86 миллиардов</h4>
@@ -149,9 +147,9 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему 
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему 
             миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду 
-            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -209,7 +207,7 @@
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-          <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+          <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
           <nav class="resources__logo-zone">
             <a class="resources__link" href="#" target="_blank">
               <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Арзамас">
